# ostrich-node

./: .gitmodules  CMakeLists.txt  cmakejs.cmake  package.json
.github/workflows/: ci.yml
lib/: BufferedOstrichStore.cc  BufferedOstrichStore.h  BufferedOstrichStore.ts  IBufferedOstrichStoreNative.ts  IOstrichStoreNative.ts  LiteralsUtils.cc  LiteralsUtils.h  OstrichStore.cc  OstrichStore.h  OstrichStore.ts  bufferedOstrich.cc  index.ts  ostrich.cc
test/: deltamaterialized-test.ts  prepare-ostrich.ts  version-test.ts  versionmaterialized-test.ts
